Use unmodifiableMap for shardSizes in ClusterInfo
To avoid copying potentially large shardSizes which shows performance
issue.

Relates: ES-12723